--- a/ArrayEx2/.project
+++ b/ArrayEx2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ArrayEx</name>
+	<name>ArrayEx2</name>
 	<comment></comment>
 	<projects>
 	</projects>
